--- a/fixture/package.json
+++ b/fixture/package.json
@@ -27,11 +27,14 @@
   "homepage": "https://github.com/udacity/cn-interview#readme",
   "dependencies": {
     "body-parser": "^1.17.1",
+    "ejs": "^2.5.6",
     "express": "^4.15.2",
-    "request": "^2.81.0",
     "urllib": "^2.21.2"
   },
   "devDependencies": {
+    "gulp": "^3.9.1",
+    "gulp-autoprefixer": "^3.1.1",
+    "gulp-sass": "^3.1.0",
     "standard": "^10.0.1",
     "tap": "^10.3.1"
   }
