--- a/fixture/package.json
+++ b/fixture/package.json
@@ -34,7 +34,9 @@
   "devDependencies": {
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.1",
+    "gulp-cssnano": "^2.1.2",
     "gulp-sass": "^3.1.0",
+    "gulp-uglify": "^2.1.2",
     "standard": "^10.0.1",
     "tap": "^10.3.1"
   }
