--- a/project/package.json
+++ b/project/package.json
@@ -2,9 +2,16 @@
   "name": "project",
   "version": "0.1.0",
   "private": true,
+  "jest": {
+    "snapshotSerializers": [
+      "enzyme-to-json/serializer"
+    ]
+  },
   "dependencies": {
     "bootstrap": "^4.0.0",
     "classnames": "^2.2.5",
+    "enzyme": "^3.3.0",
+    "enzyme-adapter-react-16": "^1.1.1",
     "isomorphic-fetch": "^2.2.1",
     "prop-types": "^15.6.0",
     "react": "^16.2.0",
@@ -13,15 +20,19 @@
     "react-icons": "^2.2.7",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
+    "react-test-renderer": "^16.2.0",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0"
   },
   "devDependencies": {
+    "enzyme-to-json": "^3.3.1",
     "eslint": "^4.16.0",
     "eslint-plugin-jest": "^21.7.0",
     "eslint-plugin-react": "^7.5.1",
+    "fetch-mock": "^6.0.0",
     "react-scripts": "1.1.0",
-    "redux-logger": "^3.0.6"
+    "redux-logger": "^3.0.6",
+    "redux-mock-store": "^1.5.1"
   },
   "scripts": {
     "start": "react-scripts start",
